@@ -1,3 +1,7 @@
+n/a - April 17, 2004
+
+	* Added the lisa bootscript, lisa is part of the KDE Network package
+
 n/a - April 12, 2004
 
 	* Added a automatic modules loading script to the contrib directory
